[gd_scene load_steps=14 format=3 uid="uid://d0j4mb367lyg0"]

[ext_resource type="Script" path="res://stuff/scripts/world.gd" id="1_ljkgd"]
[ext_resource type="FontFile" uid="uid://c8xahfocj4wou" path="res://stuff/GUMDROP.ttf" id="2_u8aq2"]
[ext_resource type="Texture2D" uid="uid://j7e5sqa0ey4q" path="res://stuff/texture_07.png" id="3_8umdh"]
[ext_resource type="PackedScene" uid="uid://kjea0mrd5e5c" path="res://scenes/dummy.tscn" id="4_qkoyb"]
[ext_resource type="PackedScene" uid="uid://dah7lj1sw451s" path="res://scenes/whomps_fortress.tscn" id="5_3hqrj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dqs7s"]
bg_color = Color(0.905882, 0.803922, 0.996078, 1)
corner_radius_top_left = 11
corner_radius_top_right = 11
corner_radius_bottom_right = 11
corner_radius_bottom_left = 11
shadow_color = Color(0.788235, 0.529412, 0.988235, 0.486275)
shadow_size = 10

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_k3fx6"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_6bxyf"]
panorama = SubResource("CompressedTexture2D_k3fx6")

[sub_resource type="Sky" id="Sky_p0hlb"]
sky_material = SubResource("PanoramaSkyMaterial_6bxyf")

[sub_resource type="Environment" id="Environment_xj5u1"]
background_mode = 1
background_color = Color(1, 0.933333, 0.945098, 1)
sky = SubResource("Sky_p0hlb")
ssao_enabled = true
fog_light_energy = 0.1
volumetric_fog_density = 0.02

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g34t0"]
albedo_color = Color(0.643137, 0.768627, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jxrtg"]
albedo_color = Color(0.643137, 0.768627, 1, 1)
albedo_texture = ExtResource("3_8umdh")

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_t6x60"]
properties/0/path = NodePath("dummy:rotation")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("dummy:position")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="world" type="Node"]
script = ExtResource("1_ljkgd")

[node name="bg" type="ColorRect" parent="."]
offset_left = -1.0
offset_top = -5.0
offset_right = 1152.0
offset_bottom = 657.0
color = Color(0.92549, 0.964706, 1, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Main Menu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 330.0
offset_top = 229.0
offset_right = -330.0
offset_bottom = -244.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dqs7s")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Main Menu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Main Menu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/Main Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.0745098, 0, 0.647059, 1)
theme_override_fonts/font = ExtResource("2_u8aq2")
theme_override_font_sizes/font_size = 25
text = "MAIN  MENU"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Host" type="Button" parent="CanvasLayer/Main Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.639216, 0.654902, 0.694118, 1)
theme_override_fonts/font = ExtResource("2_u8aq2")
theme_override_font_sizes/font_size = 17
text = "HOST"

[node name="Join" type="Button" parent="CanvasLayer/Main Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.639216, 0.654902, 0.694118, 1)
theme_override_fonts/font = ExtResource("2_u8aq2")
theme_override_font_sizes/font_size = 17
text = "JOIN"

[node name="AddressEntry" type="LineEdit" parent="CanvasLayer/Main Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_u8aq2")
theme_override_font_sizes/font_size = 17
placeholder_text = "Enter IP"
alignment = 1

[node name="environment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_xj5u1")

[node name="sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.933167, 0.309878, -0.182139, 0, 0.506726, 0.862107, 0.359443, -0.80449, 0.47286, 0, 0, 0)
shadow_enabled = true
sky_mode = 1

[node name="map" type="Node3D" parent="."]

[node name="CSGBox3D" type="CSGBox3D" parent="map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.03188, 1.34385, -1.90551)
use_collision = true
size = Vector3(1, 0.3, 2)
material = SubResource("StandardMaterial3D_g34t0")

[node name="CSGBox3D1" type="CSGBox3D" parent="map"]
use_collision = true
size = Vector3(12, 1, 14)
material = SubResource("StandardMaterial3D_jxrtg")

[node name="CSGBox3D2" type="CSGBox3D" parent="map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.0086, 0, 0)
use_collision = true
size = Vector3(12, 1, 14)
material = SubResource("StandardMaterial3D_jxrtg")

[node name="CSGBox3D3" type="CSGBox3D" parent="map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.9517, 0, 0)
use_collision = true
size = Vector3(12, 1, 14)
material = SubResource("StandardMaterial3D_jxrtg")

[node name="CSGBox3D4" type="CSGBox3D" parent="map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.9517, 0, -14)
use_collision = true
size = Vector3(12, 1, 14)
material = SubResource("StandardMaterial3D_jxrtg")

[node name="CSGBox3D5" type="CSGBox3D" parent="map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.0086, 0, -14)
use_collision = true
size = Vector3(12, 1, 14)
material = SubResource("StandardMaterial3D_jxrtg")

[node name="CSGBox3D6" type="CSGBox3D" parent="map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00864601, 0, -14)
use_collision = true
size = Vector3(12, 1, 14)
material = SubResource("StandardMaterial3D_jxrtg")

[node name="CSGBox3D7" type="CSGBox3D" parent="map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00864601, 0, 14)
use_collision = true
size = Vector3(12, 1, 14)
material = SubResource("StandardMaterial3D_jxrtg")

[node name="CSGBox3D8" type="CSGBox3D" parent="map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.0086, 0, 14)
use_collision = true
size = Vector3(12, 1, 14)
material = SubResource("StandardMaterial3D_jxrtg")

[node name="CSGBox3D9" type="CSGBox3D" parent="map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.9914, 0, 14)
use_collision = true
size = Vector3(12, 1, 14)
material = SubResource("StandardMaterial3D_jxrtg")

[node name="dummy" parent="." instance=ExtResource("4_qkoyb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 36.2854, -17.0816)

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/player/player.tscn")
spawn_path = NodePath("..")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_t6x60")

[node name="Whomps_Fortress" parent="." instance=ExtResource("5_3hqrj")]

[connection signal="pressed" from="CanvasLayer/Main Menu/MarginContainer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="CanvasLayer/Main Menu/MarginContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
